--- a/src/components/Game/Person/Person.css
+++ b/src/components/Game/Person/Person.css
@@ -1,5 +1,6 @@
 #container-person {
 	background-color: goldenrod;
+	background-image: url('../../../assets/images/paper.png');
 	display: flex;
 	align-items: center;
 	height: 100vh;
