paper sheet image added, font added

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,4 +1,6 @@
 #wrapper {
-    background-color: #AA5276;
     height: 100vh;
+    background-image: url('../../assets/images/paper.jpg');
+    background-size: cover;
+    background-color: #FFFFFF;
 }
