--- a/src/components/Game/Word/Word.css
+++ b/src/components/Game/Word/Word.css
@@ -1,5 +1,20 @@
+@font-face {
+	font-family: 'Moon Flower';
+	src: url('../../../assets/fonts/Moon Flower Bold.ttf');
+}
+
 #container-word {
-	background-color: green;
+	background-color: transparent;
 	position: relative;
 	height: 50vh;
+	font-family: Moon Flower;
+	font-size: 100px;
+	font-weight: 900;
+	color: #000080;
+}
+
+@media (max-width: 768px) {
+	#container-word {
+		height: 20vh;
+	}
 }
