--- a/src/components/Game/Word/Word.css
+++ b/src/components/Game/Word/Word.css
@@ -6,17 +6,6 @@
 #container-word {
 	background-color: transparent;
 	position: relative;
-	height: 50vh;
-	font-family: Moon Flower;
-	font-size: 100px;
-	font-weight: 900;
-	color: #000080;
-}
-
-@media (max-width: 768px) {
-	#container-word {
-		height: 20vh;
-	}
 }
 
 #container-postit {
@@ -34,4 +23,34 @@
 	padding-right: 1vw;
 	color: #000080;
 	font-size: 25px;
+	font-family: Moon Flower;
+}
+
+#container-track {
+	display: flex;
+	flex-wrap: wrap;
+	font-family: Moon Flower;
+	font-size: 10vh;
+	font-weight: 900;
+	color: #000080;
+	text-align: center;
+	justify-content: center;
+}
+
+.spaceBetweenWords {
+	margin-right: 5vh;
+}
+
+@media (max-width: 768px) {
+	#container-word {
+		height: 20vh;
+	}
+
+	#container-track {
+		font-size: 10vw;
+	}
+
+	.spaceBetweenWords {
+		margin-right: 5vw;
+	}
 }
