new images of person added

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,4 +1,4 @@
-#wrapper {
+#container-game {
     height: 100vh;
     background-image: url('../../assets/images/paper.jpg');
     background-size: cover;
