--- a/src/components/Game/Keyboard/Keyboard.css
+++ b/src/components/Game/Keyboard/Keyboard.css
@@ -7,8 +7,7 @@
 	margin-top: 10vh;
 }
 
-
-.key {
+#container-keyboard .key {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -22,13 +21,13 @@
 	margin-right: 1vh;
 }
 
-.guessedKey {
+#container-keyboard .guessedKey {
 	background-color: transparent;
 	border-radius: 50%;
 	border: 1vh solid rgba(81, 233, 11, 0.877);
 }
 
-.failedKey {
+#container-keyboard .failedKey {
 	background-color: transparent;
 	border-radius: 50%;
 	border: 1vh solid rgb(192, 0, 0);
@@ -40,7 +39,7 @@
 		margin-top: 0vh;
 	}
 
-	.key{
+	#container-keyboard .key {
 		height: 10vw;
 		width: 10vw;
 		font-size: 4vw;
