--- a/src/components/Game/Word/Word.css
+++ b/src/components/Game/Word/Word.css
@@ -19,13 +19,13 @@
 	padding-right: 1vw;
 	color: #000080;
 	font-size: 25px;
-	font-family: "Moon Flower Bold";
+	font-family: 'Moon Flower Bold';
 }
 
 #container-track {
 	display: flex;
 	flex-wrap: wrap;
-	font-family: "Moon Flower Bold";
+	font-family: 'Moon Flower Bold';
 	font-size: 10vh;
 	font-weight: 900;
 	color: #000080;
@@ -33,7 +33,7 @@
 	justify-content: center;
 }
 
-.spaceBetweenWords {
+#container-track .spaceBetweenWords {
 	margin-right: 5vh;
 }
 
@@ -46,7 +46,7 @@
 		font-size: 10vw;
 	}
 
-	.spaceBetweenWords {
+	#container-track .spaceBetweenWords {
 		margin-right: 5vw;
 	}
 }
