--- a/src/components/Game/Keyboard/Keyboard.css
+++ b/src/components/Game/Keyboard/Keyboard.css
@@ -1,10 +1,15 @@
 #container-keyboard {
-	background-color: transparent;
-	position: relative;
-	height: 50vh;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
+	position: relative;
+	background-color: transparent;
+	height: 50vh;
 	margin-top: 10vh;
+}
+
+#replay{
+	height: fit-content;
 }
 
 #container-keyboard .key {
