--- a/src/components/Game/Person/Person.css
+++ b/src/components/Game/Person/Person.css
@@ -1,5 +1,6 @@
 #container-person {
 	display: flex;
+	position: relative;
 	background-color: transparent;
 	height: 80vh;
 	margin-top: 10vh;
@@ -13,7 +14,19 @@
 @media (max-width: 768px) {
 	#container-person {
 		justify-content: center;
-		height: 40vh;
+		height: 30vh;
 		margin-top: auto;
+		margin-bottom: 0vh;
+	}
+}
+
+@media (max-width: 768px) and (orientation: landscape) {
+	#container-person {
+		height: 100vh;
+		width: 30vw;
+	}
+
+	#container-person img {
+		max-width: 30vw;
 	}
 }
