--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,6 +5,14 @@
 	height: 100vh;
 }
 
+@media (max-width: 768px) and (orientation: portrait){
+	.container-fluid {
+		background-image: url('../../assets/images/cuaderno-mobile.png');
+		height: unset;
+		min-height: 100vh;
+	}
+}
+
 @font-face {
 	font-family: 'Moon Flower Bold';
 	src: url('../../assets/fonts/Moon Flower Bold.ttf');
@@ -13,4 +21,9 @@
 @font-face {
 	font-family: 'Cramaten';
 	src: url('../../assets/fonts/Cramaten.ttf');
+}
+
+@font-face {
+	font-family: 'Elegant Sans Bold';
+	src: url('../../assets/fonts/Elegant Sans Bold.ttf');
 }
