--- a/src/components/Search/Result/Result.css
+++ b/src/components/Search/Result/Result.css
@@ -1,17 +1,66 @@
 #results {
-	background-color: cyan !important;
-	height: 40vh;
+	display: flex;
+	background-color: transparent;
+	flex-direction: row;
+	justify-content: space-evenly;
 	margin-top: 15vh;
+	margin-left: 10vw;
+	margin-right: 10vw;
+	flex-wrap: nowrap;
+}
+
+#artist {
+	background-color: #f8f8d9;
+	border: 1vh #ffffff solid;
+	border-radius: 1vw;
 	text-align: center;
 }
-#results h1 {
-	color: cornsilk;
+
+#artist #title {
+	color: #000000;
+	font-family: 'Elegant Sans Bold';
+	font-size: 2vw;
 }
 
-#results img {
+#artist img {
 	max-height: 25vh;
+	border: 0.5vh #000000 solid;
 }
 
-#results #play {
+#artist button {
+	background-color: #000000;
+	border: 0vh;
+	margin-bottom: 1vh;
+}
+
+#artist #play {
 	margin-top: 1vw;
+}
+
+@media (max-width: 768px) and (orientation: portrait) {
+	#results {
+		flex-wrap: wrap;
+	}
+
+	#artist {
+		margin-bottom: 3vh;
+	}
+
+	#artist #title {
+		font-size: 8vw;
+	}
+}
+
+@media (max-width: 768px) and (orientation: landscape) {
+	#results {
+		flex-wrap: nowrap;
+		justify-content: space-around;
+		margin-left: 2vw;
+		margin-right: 2vw;
+		margin-top: 10vh;
+	}
+
+	#artist #title {
+		font-size: 3vw;
+	}
 }
